# job_scraper

./: pyproject.toml  settings.py
job_scraper/: companies.csv  ignore_urls.csv  job_scraper_controller.py
job_scraper/job_scraper/: items.py  settings.py
job_scraper/job_scraper/spiders/: getro_scraper.py  greenhouse_scraper.py  lever_scraper.py
job_scraper/output/: all_jobs.csv  all_jobs.jsonl  all_jobs_20250625_095334.json  all_jobs_20250625_095623.json  all_jobs_20250625_100601.csv  all_jobs_20250625_100601.json  all_jobs_20250625_101408.json  all_jobs_20250625_103626.csv  all_jobs_20250625_103626.jsonl  all_jobs_20250625_104246.csv  all_jobs_20250625_104246.jsonl  all_jobs_20250625_105914.csv  all_jobs_20250625_105914.jsonl  all_jobs_20250627_161805.csv  all_jobs_20250627_161805.jsonl  all_jobs_20250627_170509.jsonl  previous_jobs.jsonl
